# mpi-challenge

./: .gitignore  CMakeLists.txt  ReadMe.md  ablaufNodes.sh  mainMPIDemoVersion.cpp
Nodes/: ablaufNodes.sh
doc/: Test.tex  documentation.tex
doc/section/: Auswertung.tex  Ergebnis.tex
doc/subsection/: Auswertung.tex  Cloud Computing.tex  Einleitung.tex  Ergebnisse.tex  Fazit.tex  MergeSort.tex  Message Passing Interface.tex  Optimierung.tex  Parallelisierung.tex  Test.tex  Test.tex.aux
include/: HelperFuncs.hpp  InOutFuncs.hpp  MergeSort.hpp
script/: install.sh  startFile.sh
src/: MergeSort.cpp  main.cpp  mainMPIDemoVersion.cpp
test/: CMakeLists.txt  TestSplitEven.hpp  testMergeSort.cpp
test/ExampleSolutions/: solution1.txt
test/ExampleTexts/: text1.txt  text2.txt  text3.txt
